# analise-desastres-naturais-br

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  main.py  pyproject.toml  ruff.toml
.streamlit/: config.toml  secrets.toml.example
assets/css/: styles.css
assets/js/: script.js
data/processed/: chart_insights.json
data/raw/: el_nino_la_nina_eventos_1990_2025.csv
data/reference/: disaster_contexts.json
frontend/: app.py
frontend/components/: __init__.py  ai_insights.py  charts.py  cleaning.py  constants.py  data_loader.py  enso.py  filters.py  formatters.py  insights.py  metrics.py  sections.py  styles.py  transformations.py  ui.py
notebooks/: analise-exploratorio.ipynb
