[project]
name = "analise-desastres-naturais-rj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.5",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "seaborn>=0.13.2",
    "streamlit>=1.57.0",
    "taskipy>=1.14.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.14",
]


[tool.taskipy.tasks]
start = "uv run streamlit run frontend/app.py --server.port=8502"
pre_format = "uv run ruff check --fix ."
format = "uv run ruff format ."
post_format = "uv run ruff check ."
lint = "uv run ruff check ."
test = "uv run pytest -s -v tests"




